Fix toggle switch bug in high-contrast mode (#7561)

--- a/client/scss/components/_switch.scss
+++ b/client/scss/components/_switch.scss
@@ -38,11 +38,13 @@ $switch-color-middle-grey: #777;
         }
 
         &::after {
+            box-sizing: border-box;
             position: absolute;
             top: 50%;
             transform: translate($switch-border, -50%);
             height: $switch-height;
             width: $switch-height;
+            border: $switch-border solid $color-white;
             border-radius: 50%;
             background-color: $color-white;
         }
